--- a/package.json
+++ b/package.json
@@ -9,34 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "firebase": "^10.5.0",
-    "cloudinary": "^1.41.0",
-    "@mui/material": "^5.14.15",
-    "@mui/icons-material": "^5.14.15",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.15",
+    "@mui/material": "^5.14.15",
     "@mui/x-data-grid": "^6.17.0",
     "@mui/x-date-pickers": "^6.17.0",
-    "react-quill": "^2.0.0",
-    "react-hook-form": "^7.47.0",
-    "react-dropzone": "^14.2.3",
-    "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0",
-    "date-fns": "^2.30.0",
     "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
+    "cloudinary": "^1.41.0",
+    "date-fns": "^2.30.0",
+    "firebase": "^10.5.0",
     "js-cookie": "^3.0.5",
-    "react-hot-toast": "^2.4.1"
+    "next": "14.0.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
+    "react-quill": "^2.0.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
+    "@types/js-cookie": "^3.0.4",
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
-    "@types/js-cookie": "^3.0.4",
     "eslint": "^8.51.0",
-    "eslint-config-next": "14.0.0"
+    "eslint-config-next": "14.0.0",
+    "typescript": "^5.2.2"
   }
 }
