--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cloudinary": "^1.41.0",
     "date-fns": "^2.30.0",
     "firebase": "^10.5.0",
+    "firebase-admin": "^13.6.0",
     "js-cookie": "^3.0.5",
     "next": "14.0.0",
     "react": "^18.2.0",
